kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ui
  labels:
    app: user-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-ui
  template:
    metadata:
      labels:
        app: user-ui
    spec:
      containers:
        - name: user-ui
          image: davidcamelo/user-ui:main
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 1
